[package]
name = "webb-primitives"
version = "0.1.0"
authors = ["Drew Stone <drewstone329@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git"}

# Arkworks
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ], optional = true }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = [ "curve", "r1cs" ], optional = true }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ], optional = true }
ark-groth16 = { version = "^0.3.0", default-features = false }

blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = false }
arkworks-native-gadgets = { version = "1.0.0", default-features = false, optional = true }

codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "2.2.0" }

ethabi = { version = "15.0.0", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }

webb-proposals = { version = "0.2.4", default-features = false }

[features]
default = ["std", "hashing", "verifying", "field_ops"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"ark-ff/std",
	"ark-ec/std",
	"ark-std/std",
	"ark-relations/std",
	"webb-proposals/std"
]
field_ops = [
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
hashing = [
	"arkworks-native-gadgets",
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
verifying = [
	"arkworks-native-gadgets",
	"ark-bls12-381",
	"ark-bls12-377",
	"ark-bn254",
]
