[package]
name = "contracts-node-runtime"
version = "0.33.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Runtime configured for smart contracts via `pallet-contracts`."
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/paritytech/substrate-contracts-node"
repository = "https://github.com/paritytech/substrate-contracts-node"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }

pallet-authorship = { version = "24.0.0", package = "pallet-authorship", default-features = false }
pallet-assets = { version = "25.0.0", package = "pallet-assets", default-features = false }
pallet-balances = { version = "24.0.0", package = "pallet-balances", default-features = false }
frame-support = { version = "24.0.0", package = "frame-support", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "12.0.0", package = "pallet-insecure-randomness-collective-flip", default-features = false }
pallet-sudo = { version = "24.0.0", package = "pallet-sudo", default-features = false }
frame-system = { version = "24.0.0", package = "frame-system", default-features = false }
pallet-timestamp = { version = "23.0.0", package = "pallet-timestamp", default-features = false }
pallet-transaction-payment = { version = "24.0.0", package = "pallet-transaction-payment", default-features = false }
frame-executive = { version = "24.0.0", package = "frame-executive", default-features = false }
sp-api = { version = "22.0.0", package = "sp-api", default-features = false }
sp-block-builder = { version = "22.0.0", package = "sp-block-builder", default-features = false }
sp-core = { version = "24.0.0", package = "sp-core", default-features = false }
sp-inherents = { version = "22.0.0", package = "sp-inherents", default-features = false }
sp-offchain = { version = "22.0.0", package = "sp-offchain", default-features = false }
sp-runtime = { version = "27.0.0", package = "sp-runtime", default-features = false }
sp-io = { version = "26.0.0", package = "sp-io", default-features = false }
sp-session = { version = "23.0.0", package = "sp-session", default-features = false }
sp-std = { version = "11.0.0", package = "sp-std", default-features = false }
sp-transaction-pool = { version = "22.0.0", package = "sp-transaction-pool", default-features = false }
sp-version = { version = "25.0.0", package = "sp-version", default-features = false }
sp-weights = { version = "23.0.0", package = "sp-weights", default-features = false }
pallet-utility = { version = "24.0.0", package = "pallet-utility", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "22.0.0", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "24.0.0", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# Contracts specific packages
pallet-contracts = { version = "23.0.0", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { version = "27.0.0", package = "pallet-contracts-primitives", default-features = false }

[build-dependencies]
substrate-wasm-builder =  { version = "13.0.0", package = "substrate-wasm-builder", optional = true }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-assets/std",
	"substrate-wasm-builder",
]
