[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { path = "/home/andrew/code/ink/crates/ink", default-features = false }
contract-traits = { path = "../traits", default-features = false }

[dev-dependencies]
ink_e2e = { path = "/home/andrew/code/ink/crates/e2e" }
frame-support = { workspace = true }
scale-value = "0.13.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "contract-traits/std",
]
ink-as-dependency = []
e2e-tests = []
