[workspace]
members = [
    "traits",
]

[package]
name = "flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink/", branch = "master", default-features = false, features = ["no-panic-handler", "no-allocator"] }
flipper-traits = { path = "traits", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/paritytech/ink/", package = "ink_e2e", branch = "master" }
frame-support = { version = "30.0.0", default-features = false }
scale-value = "0.13.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "flipper-traits/std",
]
ink-as-dependency = []
e2e-tests = []
